# hw3-shrija-malla

./: Makefile  README.md  ai_documentation.txt  index.md  myst.yml  pyproject.toml
.github/workflows/: myst.yml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
